Fixed wait message not appearing while clicking in update all button. Fixed edit and undo button not appearing aligned in qualitative for MS. Fixed Germany national strategy pdf file not uploading correctly.

--- a/src/main/webapp/less/baromether-backend-style.less
+++ b/src/main/webapp/less/baromether-backend-style.less
@@ -327,6 +327,9 @@ table.literals{
 	td:nth-child(4){
 		text-align: center;
 	}
+	td:nth-child(5){
+		text-align: center;
+	}
 	button{
 		margin-right: 10px;
 	}
@@ -670,11 +673,6 @@ div.loading-screen{
 	    font-size: medium;
 	    text-align: center;
 	}
-}
-
-#updateAllButton {
-	position: relative;
-    top: 27px;
 }
 
 @keyframes spin {
